// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Appointment: Represents an appointment made by a patient with a doctor.
Doctor: Represents a doctor with specialization and contact details.
Patient: Represents a patient with personal details and contact information.
Billing: Represents the billing information for a patient's appointment.
Insurance: Contains details about a patient's insurance plan.
MedicalRecord: Represents the medical records/history of a patient.
Prescription: Contains prescriptions issued to a patient during an appointment.
Procedure: Represents a medical procedure that can be performed.
Referral: Represents a referral given to a patient for another specialist.
Room: Represents a room used for conducting appointments.
Schedule: Represents a doctor's schedule including working hours and breaks.
Treatment: Represents a treatment plan assigned to a patient.
'''
}

Table Appointment {
    id INTEGER [primary key]
    patient_id INTEGER 
    doctor_id INTEGER 
    appointment_date DATETIME 
    status VARCHAR 
    }

Table Doctor {
    id INTEGER [primary key]
    name VARCHAR 
    specialization VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    }

Table Patient {
    id INTEGER [primary key]
    name VARCHAR 
    gender VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    address VARCHAR 
    }

Table Billing {
    id INTEGER [primary key]
    appointment_id INTEGER 
    amount_due FLOAT 
    date_issued DATETIME 
    }

Table Insurance {
    id INTEGER [primary key]
    patient_id INTEGER 
    provider VARCHAR 
    plan VARCHAR 
    coverage_amount FLOAT 
    }

Table MedicalRecord {
    id INTEGER [primary key]
    patient_id INTEGER 
    description VARCHAR 
    record_date DATETIME 
    }

Table Prescription {
    id INTEGER [primary key]
    appointment_id INTEGER 
    medication VARCHAR 
    dosage VARCHAR 
    notes VARCHAR 
    }

Table Procedure {
    id INTEGER [primary key]
    name VARCHAR 
    cost FLOAT 
    duration INTEGER 
    }

Table Referral {
    id INTEGER [primary key]
    patient_id INTEGER 
    from_doctor_id INTEGER 
    to_specialist VARCHAR 
    reason VARCHAR 
    date_given DATETIME 
    }

Table Room {
    id INTEGER [primary key]
    room_number VARCHAR 
    floor INTEGER 
    availability BOOLEAN 
    }

Table Schedule {
    id INTEGER [primary key]
    doctor_id INTEGER 
    weekday VARCHAR 
    start_time DATETIME 
    end_time DATETIME 
    }

Table Treatment {
    id INTEGER [primary key]
    patient_id INTEGER 
    description VARCHAR 
    start_date DATETIME 
    }



// Relationships
    Ref: Appointment.(doctor_id) < Doctor.(id)
    Ref: Appointment.(patient_id) < Patient.(id)
    Ref: Billing.(appointment_id) < Appointment.(id)
    Ref: Insurance.(patient_id) < Patient.(id)
    Ref: MedicalRecord.(patient_id) < Patient.(id)
    Ref: Prescription.(appointment_id) < Appointment.(id)
    Ref: Referral.(from_doctor_id) < Doctor.(id)
    Ref: Referral.(patient_id) < Patient.(id)
    Ref: Schedule.(doctor_id) < Doctor.(id)
    Ref: Treatment.(patient_id) < Patient.(id)
